--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,14 +16,19 @@
             android:name=".presentation.main.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Todolistjavadvfu.NoActionBar">
+            android:theme="@style/Theme.Todolistjavadvfu"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.example.todolist_java_dvfu.presentation.taskFace.taskFaceActivity" />
-    </application>
 
+
+        <activity
+            android:name="com.example.todolist_java_dvfu.presentation.face.taskFaceActivity"
+            android:theme="@style/Theme.Todolistjavadvfu"
+            />
+    </application>
 </manifest>
